--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "akash tiwari",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "validator": "^13.15.0"
   }
 }
